--- a/src/Pages/Todo/style.css
+++ b/src/Pages/Todo/style.css
@@ -15,6 +15,24 @@
   margin: 0 auto;
   flex-direction: column;
   align-items: center;
+  position: relative;
+}
+
+.loader-wrapper {
+  position: absolute;
+  background-color: black;
+  opacity: 0.3;
+  z-index: 10;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  color: #fff;
+  font-size: 36px;
 }
 
 .container h1 {
